Enhance timeline route, expand JSON output, and improve CI setup
- Extended the timeline route to accept parameters for setting font types, allowing for more flexible and visually appealing timeline presentations.
- Enhanced the JSON output by adding additional parameters to simplify the usage of templates, making it easier to generate custom views.
- Added validation for date inputs to ensure that the data provided is correct and to prevent runtime errors due to invalid formats.
- Refactored the application to improve code readability and maintainability. This restructuring aims to streamline future enhancements and bug fixes.
- Integrated pytest into our GitHub CI actions to automate testing, ensuring that all commits maintain a high standard of quality.
- Configured Dependabot on GitHub to automatically update dependencies, keeping the project secure and up-to-date with the latest libraries and frameworks.

--- a/k8s.yml
+++ b/k8s.yml
@@ -18,7 +18,7 @@ spec:
    spec:
      containers:
        - name: calendarium-web-container  # Container name for clarity
-         image: ghcr.io/whustedt/calendarium:v1.0.0  # The specific Docker image to use
+         image: ghcr.io/whustedt/calendarium:v2.1.0  # The specific Docker image to use
          env:
           - name: TZ
             value: "Europe/Berlin"
@@ -67,7 +67,7 @@ kind: Ingress
 metadata:
  name: calendarium-web-ingress  # Name of the ingress
 spec:
- rules:
+ rules: # add host for real deployment
    - http:
        paths:
          - path: /
