Update Python interpreter path and add locale setting

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
 	"customizations": {
 		"vscode": {
 			"settings": {
-				"python.defaultInterpreterPath": "usr/local/bin/python"
+				"python.defaultInterpreterPath": "/usr/local/bin/python", 
+				"locale": "en"
 			}
 		}
 	},
