--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,25 @@
 	"features": {
 		"ghcr.io/devcontainers/features/python:1": {}
 	},
+	"containerEnv": {
+		"LANG": "en_US.UTF-8",
+		"LC_ALL": "en_US.UTF-8"
+	},
 	"customizations": {
 		"vscode": {
 			"settings": {
-				"python.defaultInterpreterPath": "/usr/local/bin/python", 
-				"locale": "en"
-			}
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"python.testing.pytestEnabled": true,
+				"python.testing.unittestEnabled": false,
+				"python.testing.pytestArgs": [
+					"tests"
+				],
+				"python.testing.autoTestDiscoverOnSaveEnabled": true
+			},
+			"extensions": [
+				"ms-python.python",
+				"ms-python.pylint"
+			]
 		}
 	},
 
