--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,8 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
 	"name": "Calendarium (Python 3)",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
 	"features": {
 		"ghcr.io/devcontainers/features/python:1": {}
-	},
-	"containerEnv": {
-		"LANG": "en_US.UTF-8",
-		"LC_ALL": "en_US.UTF-8"
 	},
 	"customizations": {
 		"vscode": {
@@ -20,7 +13,10 @@
 				"python.testing.pytestArgs": [
 					"tests"
 				],
-				"python.testing.autoTestDiscoverOnSaveEnabled": true
+				"python.testing.autoTestDiscoverOnSaveEnabled": true,
+				"workbench.colorTheme": "Default Dark+",
+				"git.autofetch": true,
+				"locale": "en"
 			},
 			"extensions": [
 				"ms-python.python",
@@ -28,19 +24,11 @@
 			]
 		}
 	},
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "sudo ln -s $(pwd) /app && sudo mkdir -p /app/data && pip3 install --user -r requirements.txt && pip3 install --user pytest && echo 'Ready to go! Navigate to your project directory and run `flask run` to start your application.'"
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	"postCreateCommand": [
+		"sudo ln -s $(pwd) /app",
+		"sudo mkdir -p /app/data",
+		"pip3 install --user -r requirements.txt",
+		"pip3 install --user pytest",
+		"echo 'Ready to go! Navigate to your project directory and run `flask run` to start your application.'"
+	]
 }
